# Olfactometer-cal

./: .gitignore  README.md  olfactometer pulses analysis.ipynb  open_harp_devices.ipynb  pyproject.toml  tests.ipynb
src/: General analysis.ipynb  RF.ipynb  RF.py  tests.ipynb
