[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulse-analysis"
description = "Pulse detection and analysis module"
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "harp-python",
    "pydantic",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "scipy"
]

[tool.setuptools]
package-dir = {"" = "src"}
